deploy/bootstrap/west-wa-sea-f01/istio-system/dev/istio/istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: istio-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*.cseretail.com"
      tls:
        httpsRedirect: false
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "*.cseretail.com"
      tls:
        mode: SIMPLE
        credentialName: ssl-cert
